# text-classifier

./: hola copy.ipynb  pyproject.toml
.ipynb_checkpoints/: hola copy-checkpoint.ipynb  text_classifier-checkpoint.ipynb
